@@ -83,9 +83,10 @@ INSERT INTO `tconfig` (`token`, `value`) VALUES
 ('integria_inventory', '0'),
 ('integria_url', ''),
 ('netflow_path', '/var/spool/pandora/data_in/netflow'),
-('netflow_interval', '86400'),
+('netflow_interval', '3600'),
 ('netflow_daemon', '/usr/bin/nfcapd'),
 ('netflow_nfdump', '/usr/bin/nfdump'),
+('netflow_max_resolution', '50'),
 ('event_fields', 'evento,id_agente,estado,timestamp'),
 ('list_ACL_IPs_for_API', '127.0.0.1'),
 ('enable_pass_policy', 0),
